--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   infrared:
     build: "."
+    image: "kainosekai/infrared:latest"
     container_name: "infrared"
     restart: "unless-stopped"
     stdin_open: true
