--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,22 @@
-version: "3"
+version: "3.5"
 
 services:
   infrared:
-    build: "."
-    image: "kainosekai/infrared:latest"
-    container_name: "infrared"
-    restart: "unless-stopped"
+    build: .
+    image: kainosekai/infrared:latest
+    container_name: infrared
+    networks:
+      - infrared
+    restart: unless-stopped
     stdin_open: true
     tty: true
     ports:
-      - "25565:25565/tcp"
+      - 25565:25565/tcp
     volumes:
-      - "/usr/local/infrared/configs:/configs"
-    expose:
-      - "25565"
+      - ../configs:/configs
     environment:
-      INFRARED_CONFIG_PATH: "/configs"
+      INFRARED_CONFIG_PATH: /configs
+
+networks:
+  infrared:
+    name: infrared
