--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
 version: "3.5"
 
 services:
-  master-infrared:
+  local-infrared:
     build: .
-    image: kainosekai/infrared:master
-    container_name: master-infrared
-    network_mode: "host"
+    image: kainosekai/infrared:latest
+    container_name: local-infrared
+    networks:
+      - infrared
     restart: unless-stopped
     stdin_open: true
     tty: true
     ports:
-      - 25565:25565/tcp
+      - 25566:25565/tcp
     volumes:
       - ./configs:/configs
     environment:
       INFRARED_CONFIG_PATH: /configs
+
+networks:
+  infrared:
+    name: infrared
